[fix] spinner overflow when fullscreen.

--- a/client/src/components/common/Spinner/Spinner.scss
+++ b/client/src/components/common/Spinner/Spinner.scss
@@ -19,6 +19,7 @@
 
   &--full-screen {
     position: absolute;
+    transform: translateY(0);
     top: 0;
     left: 0;
     height: 100vh;
